--- a/rpf.cabal
+++ b/rpf.cabal
@@ -18,10 +18,13 @@ Data-Dir:               config
 Extra-Source-Files:     README Test.hs
 Executable rpf
   Main-Is:              Main.hs
-  if impl(ghc >= 6.12)
-    GHC-Options:        -Wall -fno-warn-unused-do-bind
+  if impl(ghc >= 7)
+    GHC-Options:        -Wall -O2 -fno-warn-unused-do-bind -threaded
   else
-    GHC-Options:        -Wall
+    if impl(ghc >= 6.12)
+      GHC-Options:        -Wall -O2 -fno-warn-unused-do-bind
+    else
+      GHC-Options:        -Wall -O2
   Build-Depends:        base >= 4.0 && < 5, containers, bytestring,
                         hdaemonize, hslogger, parsec,
                         appar, c10k, iproute, dns, domain-auth
